--- a/APBDProject/APBDProject.csproj
+++ b/APBDProject/APBDProject.csproj
@@ -75,7 +75,6 @@
     <Compile Include="DAL\CarOwner.cs" />
     <Compile Include="DAL\CarType.cs" />
     <Compile Include="DAL\DatabaseModel.cs" />
-    <Compile Include="Utilities\ValidationBase.cs" />
     <Compile Include="Views\AddCar.xaml.cs">
       <DependentUpon>AddCar.xaml</DependentUpon>
     </Compile>
@@ -84,6 +83,9 @@
     </Compile>
     <Compile Include="Views\CarReview.xaml.cs">
       <DependentUpon>CarReview.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\OwnerView.xaml.cs">
+      <DependentUpon>OwnerView.xaml</DependentUpon>
     </Compile>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
@@ -108,6 +110,10 @@
     <Page Include="Views\CarReview.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Views\OwnerView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
     </Page>
   </ItemGroup>
   <ItemGroup>
